# pygline

./: .gitignore  LICENSE  README.md  entity.py  gameObjects.py  gamegine.py  main.py  scene.py  setup.cfg  test.py  test2.py
docs/: _config.yml  common.html  index.html  index.md  locals.html
docs/graphics/: index.html
docs/logic/: engine.html
docs/pygline/: common.html  common.md  index.html  index.md  locals.html  locals.md  templates.html
docs/pygline/graphics/: gpubuffers.html  gpubuffers.md  index.md  rendpl.html  rendpl.md  shader.html  shader.md
docs/pygline/logic/: engine.md  event.html  event.md  index.html  index.md  scene.md
docs/pygline/objects/: components.html  components.md  gameobject.md  index.md
gamegine/: components.py  engine.py  rendpl.py  scene.py  shader.py
shaders/: fragment.frag  vertex.vert
src/gamegine/: __init__.py  components.py  engine.py  gameobject.py  locals.py  rendpl.py  shader.py
src/html/pygline/: index.html
src/html/pygline/logic/: event.html  scene.html
src/html/pygline/objects/: components.html  gameobject.html  index.html
src/pygline/: __init__.py  common.py  locals.py  templates.py
src/pygline/graphics/: __init__.py  gpubuffers.py  rendpl.py  shader.py
src/pygline/logic/: __init__.py  engine.py  event.py  scene.py
src/pygline/objects/: __init__.py  components.py  gameobject.py
src/tests/: entity.py  main.py  test_classes.py  test_main.py
src/tests/resources/shaders/: default.vert
tests/: main.py
