[metadata]
name = py-gl-gamegine
version = 0.0.1
author = ColinTF
author_email = colin.t.fin@gmail.com
description = A light weight game engine using opengl and glfw
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ColinTF/Game-Engine/
project_urls =
    Bug Tracker = https://github.com/ColinTF/Game-Engine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src